--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dodogamesstuff",
   "type": "module",
-  "version": "2.0.8-beta",
+  "version": "2.0.8-beta.1",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -10,7 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/starlight": "^0.9.0",
+    "@astrojs/starlight": "^0.9.1",
     "astro": "^3.0.6",
     "sharp": "^0.32.3"
   }
